--- a/Abschnitt4/variables.ipynb
+++ b/Abschnitt4/variables.ipynb
@@ -944,6 +944,270 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Python Comments"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "**Compiler** translates your source code into machine language.\n",
+    "\n",
+    "Compiler does this translation all at once, when you finish coding. (as a whole)\n",
+    "\n",
+    "**Interpreter** translates your source code into machine language.\n",
+    "\n",
+    "Interpeter does this translation while you are coding. (line by line)\n",
+    "\n",
+    "In Python, we have Python Interpreter."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "**Comments** are lines, which are `ignored` by Python Interpreter.\n",
+    "\n",
+    "Interpreter does not run Comments."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [],
+   "source": [
+    "# One Line Comment\n",
+    "\n",
+    "# This is one line comment"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# keeps the miles traveled\n",
+    "miles_traveled = 90000\n",
+    "\n",
+    "print(miles_traveled)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "75.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# average speed = displacement / change in time\n",
+    "\n",
+    "# first get the displacement\n",
+    "displacement = 450  # km\n",
+    "\n",
+    "# then get the change in time\n",
+    "change_in_time = 6  # hr\n",
+    "\n",
+    "# calculate the average speed\n",
+    "average_speed = displacement / change_in_time\n",
+    "\n",
+    "# print the result\n",
+    "print(average_speed)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "outputs": [],
+   "source": [
+    "# ONE LINE COMMENT"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'\\n\\nMulti-Line Comment\\n\\nIn Python, Multi-Line comments,\\nare created via two (triple) double quotes\\n\\n\\nAs in this case.\\n\\n'"
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "\n",
+    "Multi-Line Comment\n",
+    "\n",
+    "In Python, Multi-Line comments,\n",
+    "are created via two (triple) double quotes\n",
+    "\"\"\"  \"\"\"\n",
+    "\n",
+    "As in this case.\n",
+    "\n",
+    "\"\"\""
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Line 1 \n",
+      "Line 2 \n",
+      "Line 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "multi_line_text = \"Line 1 \\nLine 2 \\nLine 3\"\n",
+    "print(multi_line_text)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "`\\n` new line character."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello my dear \n",
+      "Python\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello my dear \\nPython\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'\\n    This is line 1\\n        This is line 2\\n            This is line 3\\n\\n'"
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "    This is line 1\n",
+    "        This is line 2\n",
+    "            This is line 3\n",
+    "\n",
+    "\"\"\""
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print(\"\"\"\n",
+    "    This is line 1\n",
+    "        This is line 2\n",
+    "            This is line 3\n",
+    "\n",
+    "\"\"\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
